Table users {
  id varchar [pk, note: 'ユーザーID（UUID。採用理由はarchitecture/decisions/stack.md参照）']
  clerk_id varchar [unique, not null, note: 'Clerk が発行する外部認証ID']
  region_code integer [not null, note: '居住地域（1~47のJIS都道府県コード）']
  created_at integer [not null, note: 'UNIX timestamp']
  updated_at integer [not null, note: 'UNIX timestamp']
  deleted_at integer [note: 'UNIX timestamp。NULLでない場合は論理削除済み']
}

Table family_members {
  id varchar [pk, note: 'UUID']
  user_id varchar [not null, note: '親ユーザーのID']
  name varchar(50) [note: '表示名（例: パパ、太郎など）。relationship_code=1（本人）の場合はClerkの表示名を使用するためNULL可']
  relationship_code integer [not null, note: '続柄（1:本人, 2:配偶者, 3:子, 4:親, 5:その他）。新規作成時のみ指定可、以降は編集不可']
  gender_code integer [not null, note: '性別（ISO 5218）']
  birthday integer [not null, note: '誕生日（UNIX timestamp）']
  is_default boolean [not null, note: 'デフォルトメンバー。ユーザーごとに必ず1件のみtrue。取引記録フォームの初期選択に使う']
  created_at integer [not null, note: 'UNIX timestamp']
  updated_at integer [not null, note: 'UNIX timestamp']
  deleted_at integer [note: 'UNIX timestamp。NULLでない場合は論理削除済み。relationship_code=SELFは削除不可']
}

Table ai_usage_logs {
  id integer [pk, increment, note: '内部ログ専用テーブルのためUUID方針の例外（外部に公開されないため。理由はarchitecture/decisions/stack.md参照）']
  user_id varchar [not null, note: '利用したユーザー']
  feature_code integer [not null, note: '機能の種類（1: レシート読み取り, 2: 簡易支出分析, 3: 本格的アドバイス）']
  content text [note: '生成結果。featureCode=2（簡易支出分析）の1日1回キャッシュに使う。他のfeatureCodeでは未使用']
  family_member_id varchar [note: 'featureCode=2（簡易支出分析）でのみ使用。メンバーごとに1日1回キャッシュするためのキー']
  created_at integer [not null, note: 'UNIX timestamp。この日付で1日あたりの回数をカウント（利用制限・キャッシュ判定に使う）']
}

Table ai_advice_sessions {
  id varchar [pk, note: 'UUID']
  user_id varchar [not null]
  topic integer [not null, note: '選択した初期トピック（1: 支出評価, 2: 節約アドバイス, 3: 家族構成を考慮した分析）']
  created_at integer [not null, note: 'UNIX timestamp']
}

Table ai_advice_messages {
  id varchar [pk, note: 'UUID']
  session_id varchar [not null]
  role varchar [not null, note: 'user または assistant']
  content text [not null]
  created_at integer [not null, note: 'UNIX timestamp']
}

Table categories {
  id varchar [pk, note: 'UUID。他の全テーブルと同様自動生成でよい。プロフィールセットアップ完了時に初期カテゴリ16件がユーザーごとにコピー作成される（固定UUIDのリテラル指定は不要）']
  user_id varchar [not null, note: '所有ユーザーのID（NOT NULL。システム共有のデフォルトカテゴリという概念は持たない）']
  type_code integer [not null, note: '1: 支出(Expense), 2: 収入(Income)']
  name varchar(50) [not null, note: 'カテゴリ名（例: 食費, お給料, 推し活費など）。同タイプ内で自分のカテゴリ同士は重複不可']
  icon varchar [not null, note: 'lucide-reactのアイコン名（例: Utensils）。キュレーションした一覧から選択。アップロードは不可。未選択時はデフォルトアイコン（Tag）']
  color varchar [not null, note: 'キュレーションした色キー（例: orange）。8〜10色程度のパステルスウォッチから選択。RGB等の自由入力は不可。アイコン選択時に自動プリセットされ、未上書きならそのまま使用']
  parent_id varchar [note: '親カテゴリ（自己参照・1階層のみ）。ダッシュボードのグラフ集計時に子の金額を親に合算する。親はtype_codeが一致し、かつ自身が子を持たないカテゴリのみ指定可能']
  is_pinned boolean [not null, default: false, note: 'ダッシュボードの円グラフで常に表示するための固定表示フラグ。EXPENSE側のみ意味を持つ（INCOMEには設定不可）。EXPENSE側は最低1件true必須。各ユーザーが自分専用の行を持つためカテゴリ自体に直接持たせられる（中間テーブル不要）']
  created_at integer [note: 'UNIX timestamp']
  deleted_at integer [note: 'UNIX timestamp。NULLでない場合は論理削除済み。子カテゴリの親に設定されている場合・ピン留め中の場合は削除不可']

  indexes {
    (user_id, type_code, name) [unique, note: 'deleted_at IS NULLの行のみ対象の部分インデックス。自分の既存カテゴリ同士の名前重複に対するDB側の防御層']
  }
}

Table transactions {
  id varchar [pk, note: 'UUID']
  user_id varchar [not null, note: '記録したユーザー（口座オーナー）']
  family_member_id varchar [not null, note: '支出・収入の主体。relationship_code=1（本人）を含むfamily_membersのID']
  category_id varchar [not null, note: '紐づくカテゴリ']
  amount integer [not null, note: '金額（日本円なので整数・常に正の値。支出/収入の区別はcategoryのtype_codeで判定）']
  transaction_date varchar [not null, note: '購入日・支払い日（テキスト形式で保存）。入力制限なし']
  description varchar(255) [note: '旧称memo。レシートから読み取った商品名や、ユーザーの自由メモ']
  party_id varchar [note: '取引先（任意）。選択したカテゴリのtype_codeと一致する取引先のみ選択可能']
  source_recurring_transaction_id varchar [note: '定期取引から自動生成された場合のテンプレートID。手動入力ならNULL']
  created_at integer [note: 'UNIX timestamp']
  updated_at integer [note: 'UNIX timestamp']
}

Table transaction_parties {
  id varchar [pk, note: 'UUID']
  user_id varchar [not null, note: '常に自分が作成したものだけが存在する（システムデフォルトを持たない）']
  type_code integer [not null, note: '1: 支出(Expense), 2: 収入(Income)。categoriesのtype_codeと同じ値セット']
  name varchar(50) [not null, note: '取引先名（同一ユーザー・同一タイプ内で重複不可）']
  created_at integer [not null, note: 'UNIX timestamp']
  updated_at integer [not null, note: 'UNIX timestamp']
  deleted_at integer [note: 'UNIX timestamp。NULLでない場合は論理削除済み']
}

Table recurring_transactions {
  id varchar [pk, note: 'UUID']
  user_id varchar [not null, note: '作成したユーザー']
  family_member_id varchar [not null, note: '支出・収入の主体']
  category_id varchar [not null, note: '紐づくカテゴリ']
  amount integer [not null, note: '金額（常に正の値）']
  frequency_code integer [not null, note: '1: 毎月(MONTHLY), 2: 毎年(YEARLY)']
  recurring_month integer [note: 'frequency_code=YEARLYの場合のみ使用（1〜12）']
  recurring_day integer [not null, note: '実行日（1〜31）。その月に存在しない日付は月末日に調整']
  start_date integer [not null, note: 'UNIX timestamp。この日以降の発生分から生成']
  end_date integer [note: 'UNIX timestamp。NULLなら無期限']
  description varchar(255)
  created_at integer [not null, note: 'UNIX timestamp']
  updated_at integer [not null, note: 'UNIX timestamp']
  deleted_at integer [note: 'UNIX timestamp。NULLでない場合は論理削除済み（停止）。新規生成のみ止まり、生成済みのtransactionsは残る']
}

Table recurring_transaction_logs {
  id integer [pk, increment, note: '内部ログ専用テーブルのためUUID方針の例外（外部に公開されないため。理由はarchitecture/decisions/stack.md参照）']
  recurring_transaction_id varchar [not null, note: 'テンプレートID']
  scheduled_date integer [not null, note: 'その回の発生日（UNIX timestamp）。createdAtと比較した処理遅延の検知等に使うためtimestamp型を採用']
  generated_transaction_id varchar [note: '生成したtransactionsのID。ユーザーが後で削除した場合はNULLになるが、このログ行自体は残す']
  created_at integer [not null, note: 'UNIX timestamp（Cronによる処理日時）']

  indexes {
    (recurring_transaction_id, scheduled_date) [unique, note: 'Cronの二重実行による重複生成を防ぐ']
  }
}

REF: users.id < family_members.user_id
REF: users.id < ai_usage_logs.user_id
REF: family_members.id < ai_usage_logs.family_member_id
REF: users.id < transactions.user_id
REF: users.id < categories.user_id
REF: categories.id < categories.parent_id
REF: users.id < transaction_parties.user_id
REF: transactions.party_id > transaction_parties.id
REF: users.id < recurring_transactions.user_id
REF: users.id < ai_advice_sessions.user_id
REF: ai_advice_sessions.id < ai_advice_messages.session_id
REF: transactions.category_id > categories.id
REF: transactions.family_member_id > family_members.id
REF: transactions.source_recurring_transaction_id > recurring_transactions.id
REF: recurring_transactions.category_id > categories.id
REF: recurring_transactions.family_member_id > family_members.id
REF: recurring_transaction_logs.recurring_transaction_id > recurring_transactions.id
REF: recurring_transaction_logs.generated_transaction_id > transactions.id
